About Us terminado

--- a/index.html
+++ b/index.html
@@ -30,4 +30,20 @@
             <img src="/storage/imgs/home.png">
         </section>
     </article>
+    <article class="cont">
+        <section class="left1">
+            <img src="/storage/imgs/about.png">
+        </section>
+        <section class="right1">
+            <small>About Us</small>
+            <h1>We speak the good<br>
+            food language</h1>
+            <p>It is a long established fact that a<br>
+                be distracted by the readable content<br> 
+                looking at its layout. The point of</p>
+            <div class="boton">
+                <a class="boton" href="#">Learn More</a>
+            </div>
+        </section>
+    </article>
 </html>
