Food menu, services, and we make.... terminado

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <header class="header">
         <h1>Foods</h1>
         <section class="menu">
-            <p>Home</p>
             <p>About</p>
+            <p>Home</p>
             <p>Menu</p>
             <p>Service</p>
             <p>Contact</p>
@@ -30,7 +30,7 @@
             <img src="/storage/imgs/home.png">
         </section>
     </article>
-    <article class="cont">
+    <article class="cont2">
         <section class="left1">
             <img src="/storage/imgs/about.png">
         </section>
@@ -41,9 +41,72 @@
             <p>It is a long established fact that a<br>
                 be distracted by the readable content<br> 
                 looking at its layout. The point of</p>
-            <div class="boton">
+            <div class="boton1">
                 <a class="boton" href="#">Learn More</a>
             </div>
+        </section>
+    </article>
+    <article class="cont3">
+        <section class="top">
+            <small>Food Menu</small>
+            <h1>Fresh taste and great price</h1>
+        </section>
+        <section class="bottom">
+            <div class="box">
+                <img src="/storage/imgs/food1.png">
+                <h2>Chicken Burger</h2>
+                <p>Tasty Food</p>
+                <small>$11.00</small>
+            </div>
+            <div class="box">
+                <img src="/storage/imgs/food2.png">
+                <h2>Special Beef Burger</h2>
+                <p>Tasty Food</p>
+                <small>$11.00</small>
+            </div>
+            <div class="box">
+                <img src="/storage/imgs/food3.png">
+                <h2>Chicken Fry Pack</h2>
+                <p>Tasty Food</p>
+                <small>$11.00</small>
+            </div>
+        </section>
+    </article>
+    <article class="cont4">
+        <section class="top">
+            <small>Services</small>
+            <h1>We provide best food services</h1>
+        </section>
+        <section class="bottom">
+            <div class="box">
+                <img src="/storage/imgs/s1.png">
+                <h2>Order</h2>
+                <p>It is a long established<br>  
+                    be distracted by the readable<br>
+                    looking at its layout. </p>
+            </div>
+            <div class="box">
+                <img src="/storage/imgs/s2.png">
+                <h2>Shipping</h2>
+                <p>It is a long established<br>  
+                    be distracted by the readable<br>
+                    looking at its layout. </p>
+            </div>
+            <div class="box">
+                <img src="/storage/imgs/s3.png">
+                <h2>Dellvered</h2>
+                <p>It is a long established<br>  
+                    be distracted by the readable<br>
+                    looking at its layout. </p>
+            </div>
+        </section>
+    </article>
+    <article class="cont5">
+        <section class="cuadro">
+            <h1>We make quality food<br>
+            Everyday</h1>
+            <div class="boton2">
+                <a class="boton" href="#">Learn More</a>
         </section>
     </article>
 </html>
