Parte inferior de todo casi hecha (faltan los contactos)

--- a/index.html
+++ b/index.html
@@ -53,18 +53,27 @@
         </section>
         <section class="bottom">
             <div class="box">
+                <div class="x">
+                <img src="/storage/imgs/equis.png">
+                </div>
                 <img src="/storage/imgs/food1.png">
                 <h2>Chicken Burger</h2>
                 <p>Tasty Food</p>
                 <small>$11.00</small>
             </div>
             <div class="box">
+                <div class="x">
+                    <img src="/storage/imgs/equis.png">
+                    </div>
                 <img src="/storage/imgs/food2.png">
                 <h2>Special Beef Burger</h2>
                 <p>Tasty Food</p>
                 <small>$11.00</small>
             </div>
             <div class="box">
+                <div class="x">
+                    <img src="/storage/imgs/equis.png">
+                    </div>
                 <img src="/storage/imgs/food3.png">
                 <h2>Chicken Fry Pack</h2>
                 <p>Tasty Food</p>
@@ -107,6 +116,32 @@
             Everyday</h1>
             <div class="boton2">
                 <a class="boton" href="#">Learn More</a>
+        </section>
+    </article>
+    <article class="cont6">
+        <section class="aba">
+            <h2>Menu Links</h2>
+            <p>Home<br>
+            About<br>
+            Menu<br>
+            Service<br>
+            Contact</p>
+        </section>
+        <section class="aba">
+            <h2>Our Service</h2>
+            <p>Web Design<br>
+            Web Development<br>
+            Marketing<br>
+            Product Management<br>
+            Graphic Design</p>
+        </section>
+        <section class="aba">
+            <h2>Information</h2>
+            <p>About us<br>
+            Delivery Information<br>
+            Privacy Policy<br>
+            Service<br>
+            Contact</p>
         </section>
     </article>
 </html>
