logos contacts abajo

--- a/index.html
+++ b/index.html
@@ -143,5 +143,13 @@
             Service<br>
             Contact</p>
         </section>
+        <section class="aba">
+            <h2>Contacts</h2>
+            <div class="imgs">
+            <img src="/storage/imgs/insta.png">
+            <img src="/storage/imgs/face.png">
+            <img src="/storage/imgs/tik.png">
+        </div>
+        </section>
     </article>
 </html>
