Logo twitter colocado en contacts

--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@
             <img src="/storage/imgs/insta.png">
             <img src="/storage/imgs/face.png">
             <img src="/storage/imgs/tik.png">
+            <img src="/storage/imgs/twi.png">
         </div>
         </section>
     </article>
