Modificacion a endpoints de redireccionamiento

--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
             </div>
         </section>
         <section class="right">
-            <img src="/storage/imgs/home.png">
+            <img src="storage/imgs/home.png">
         </section>
     </article>
     <article class="cont2">
         <section class="left1">
-            <img src="/storage/imgs/about.png">
+            <img src="storage/imgs/about.png">
         </section>
         <section class="right1">
             <small>About Us</small>
@@ -54,27 +54,27 @@
         <section class="bottom">
             <div class="box">
                 <div class="x">
-                <img src="/storage/imgs/equis.png">
+                <img src="storage/imgs/equis.png">
                 </div>
-                <img src="/storage/imgs/food1.png">
+                <img src="storage/imgs/food1.png">
                 <h2>Chicken Burger</h2>
                 <p>Tasty Food</p>
                 <small>$11.00</small>
             </div>
             <div class="box">
                 <div class="x">
-                    <img src="/storage/imgs/equis.png">
+                    <img src="storage/imgs/equis.png">
                     </div>
-                <img src="/storage/imgs/food2.png">
+                <img src="storage/imgs/food2.png">
                 <h2>Special Beef Burger</h2>
                 <p>Tasty Food</p>
                 <small>$11.00</small>
             </div>
             <div class="box">
                 <div class="x">
-                    <img src="/storage/imgs/equis.png">
+                    <img src="storage/imgs/equis.png">
                     </div>
-                <img src="/storage/imgs/food3.png">
+                <img src="storage/imgs/food3.png">
                 <h2>Chicken Fry Pack</h2>
                 <p>Tasty Food</p>
                 <small>$11.00</small>
@@ -88,21 +88,21 @@
         </section>
         <section class="bottom">
             <div class="box">
-                <img src="/storage/imgs/s1.png">
+                <img src="storage/imgs/s1.png">
                 <h2>Order</h2>
                 <p>It is a long established<br>  
                     be distracted by the readable<br>
                     looking at its layout. </p>
             </div>
             <div class="box">
-                <img src="/storage/imgs/s2.png">
+                <img src="storage/imgs/s2.png">
                 <h2>Shipping</h2>
                 <p>It is a long established<br>  
                     be distracted by the readable<br>
                     looking at its layout. </p>
             </div>
             <div class="box">
-                <img src="/storage/imgs/s3.png">
+                <img src="storage/imgs/s3.png">
                 <h2>Dellvered</h2>
                 <p>It is a long established<br>  
                     be distracted by the readable<br>
@@ -146,10 +146,10 @@
         <section class="aba">
             <h2>Contacts</h2>
             <div class="imgs">
-            <img src="/storage/imgs/insta.png">
-            <img src="/storage/imgs/face.png">
-            <img src="/storage/imgs/tik.png">
-            <img src="/storage/imgs/twi.png">
+            <img src="storage/imgs/insta.png">
+            <img src="storage/imgs/face.png">
+            <img src="storage/imgs/tik.png">
+            <img src="storage/imgs/twi.png">
         </div>
         </section>
     </article>
